# Checkmate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: calibrator.cpp  calibrator.hpp  chessboard.cpp  chessboard.hpp  frame_loader.cpp  frame_loader.hpp  main.cpp  renderer.cpp  renderer.hpp  utils.cpp  utils.hpp
